Attempt Fix Appearance on Mobile

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
   }
+
   /* Addes Stenberg as font option */
 @font-face {
   font-family: 'Stenberg';
@@ -37,8 +38,8 @@
 }
 
 .showcase.active {
-  width: calc(100% - 300px);
-  right: 300px;
+  width: calc(100% - 200px);
+  right: 200px;
 }
 
 .showcase header {
@@ -148,7 +149,7 @@
   width: 30px;
   height: 30px;
   cursor: pointer;
-  z-index: 5;
+  z-index: 12;
   transition: .3s;
 }
 
@@ -203,20 +204,27 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: .8;
+  opacity: 1;
   z-index: 0;
 }
 
 .menu {
   position: absolute;
   top: 0;
-  right: 0;
-  width: 300px;
+  right: -200px;
+  width: 200px;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #ffffffbb;
+  z-index: 11;
+  transition: .4s;
+}
+
+.menu.active {
+  background-color: #ffffffff;
+  right: 0;
 }
 
 .menu ul {
